--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -155,6 +155,8 @@
   font-weight: bold;
   font-size: 1.2rem;
   margin-bottom: 0.3rem;
+  text-decoration: none;
+  color: #002c5f;
 }
 
 .phone-region {
